added movies to search

--- a/src/theme/sass/components/_video.scss
+++ b/src/theme/sass/components/_video.scss
@@ -27,6 +27,16 @@ ul.video-list {
 }
 
 
+/** SEARCH *******************/
+
+#search-movies {
+  overflow: hidden;
+  .card {
+    @include card('poster');
+    float: left;
+    margin: 0 8px 8px 0;
+  }
+}
 
 
 
