--- a/src/theme/sass/components/_cards.scss
+++ b/src/theme/sass/components/_cards.scss
@@ -108,7 +108,56 @@
     }
     .actions-wrapper {
       height:252px;
+      .tvshow-play,
       .movie-play {
+        position: absolute;
+        left: 10px;
+        bottom: 9px;
+        font-size: 190%;
+      }
+    }
+
+  } @else if $size == 'poster-mini' { // Video overrides //////////////////
+    width: 125px;
+    min-width: 125px;
+    max-width: 189px;
+    height: 236px;
+    margin: 5px;
+    float: left;
+    .image {
+      height: 182px;
+      min-width: 125px;
+    }
+    .actions-wrapper {
+      height:182px;
+      min-width: 125px;
+      .season-play {
+        position: absolute;
+        left: 10px;
+        bottom: 9px;
+        font-size: 190%;
+      }
+    }
+
+  } @else if $size == 'episode' { // Video overrides //////////////////
+    $card-ep-width: 228px;
+    $card-ep-height: 197px;
+    $card-ep-img-height: 144px;
+
+    width: $card-ep-width;
+    min-width: $card-ep-width;
+    max-width: $card-ep-width;
+    height: $card-ep-height;
+    margin: 5px;
+    float: left;
+    .image {
+      height: $card-ep-img-height;
+      min-width: $card-ep-width;
+    }
+    .actions-wrapper {
+      height:$card-ep-img-height;
+      min-width: $card-ep-width;
+      .episode-play {
         position: absolute;
         left: 10px;
         bottom: 9px;
