--- a/src/theme/sass/_base.scss
+++ b/src/theme/sass/_base.scss
@@ -38,7 +38,8 @@ $color-dark-local: #6C6F6F;
 
 
 //sizing (breakpoints)
-$width-mobile: 800px;
+$width-mobile: 500px;
+$width-tablet: 800px;
 $width-small: 1360px;
 $width-large: 1700px;
 
