app will now use websockets if available

--- a/src/theme/sass/components/_player.scss
+++ b/src/theme/sass/components/_player.scss
@@ -75,8 +75,13 @@
         width: 25%;
         float: left;
         text-align: center;
+        cursor: pointer;
+        color: #979EA0;
         .fa-volume-up {
           display: none;
+        }
+        &:hover {
+          color: $color-mist;
         }
       }
     }
