fixed playlist sort, fixed custom playlist play and menu, playerstate fixes when no websockets

--- a/src/theme/sass/components/_playlists.scss
+++ b/src/theme/sass/components/_playlists.scss
@@ -31,7 +31,7 @@
   li.list-item,
   div.playlist-item {
     border-bottom: 1px solid $color-mist;
-    background: $color-whitesmoke;
+    background: $color-whitesmoke no-repeat;
     position: relative;
     color: $color-asbestos;
     height: 40px;
