--- a/src/theme/sass/components/_pages.scss
+++ b/src/theme/sass/components/_pages.scss
@@ -453,7 +453,9 @@ body {
       }
     }
     #page-header {
-      background-color: transparent !important;
+      @include breakpoint($width-tablet){
+        background-color: transparent !important;
+      }
     }
   }
 
